# syringe_pumps

./: README.md  XsCamera.py  camera.py  environment.yml  example.py  example_start_pumps.py  example_stop_pumps.py  gradient_demo.py  pump_code_pack.py  pyproject.toml  requirements.txt  setup.py
camera/: README.md  camera.py
pump_control/: README.md  XsCamera.py  environment.yml  example.py  example_start_pumps.py  example_stop_pumps.py  pump_code_pack.py  requirements.txt
pump_control.egg-info/: PKG-INFO  SOURCES.txt
