[tool.poetry]
name = "syringe_pumps"
version = "0.1.0"
description = ""
authors = ["Diana"]

[tool.poetry.dependencies]
python = "^3.8"
serial = "^0.0.97"
numpy = "^1.19.4"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
